<resources>
    <string name="app_name">VideoEditor</string>
    <string name="main_home">HOME</string>
    <string name="main_hot_theme">Hot Theme</string>
    <string name="main_studio">My Studio</string>
    <string name="to_onkey">One Make</string>
    <string name="to_gif">Make Gif</string>
    <string name="to_photo_edit">Photo Edit</string>
    <string name="to_mosaic">Add Mosaic</string>
    <string name="to_trim">Trim</string>
    <string name="to_compress">Compress</string>
    <string name="to_camera">Camera</string>
    <string name="to_video2mp3">Video2Mp3</string>
    <string name="no_network">No network connection, please check the network settings</string>
    <string name="network_error">Out of the accident, content loading failed</string>
    <string name="state_empty">Here is empty</string>
    <string name="loading">Loading</string>
    <string name="set_network">Set up a network</string>
    <string name="retry">Reload</string>
    <string name="no_more">No more data</string>
    <string name="refresh_pull_down_to_refresh">Pull down to refresh</string>
    <string name="refresh_refreshing">Loading</string>
    <string name="refresh_release_to_refresh">Release update</string>
    <string name="refresh_refresh_complete">update completed</string>
    <string name="setting">设置</string>
    <string name="vip">vip</string>
    <string name="ps_camera_roll">相机胶卷</string>
    <string name="ps_camera_roll_num">%1$s (%2$d)</string>
    <string name="ps_cancel">取消</string>
    <string name="ps_take_picture">拍摄</string>
    <string name="ps_rule">不能同时选择图片或视频</string>
    <string name="ps_message_max_num">你最多只能选择%1$s张照片</string>
    <string name="ps_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="ps_message_video_max_num">你最多只能选择%1$s个视频</string>
    <string name="ps_message_audio_max_num">你最多只能选择%1$s个音频</string>
    <string name="ps_preview">预览</string>
    <string name="ps_please">请稍候…</string>
    <string name="ps_done_front_num">%1$d/%2$d 完成</string>
    <string name="ps_completed">已完成</string>
    <string name="ps_done">完 成</string>
    <string name="ps_please_select">请选择</string>
    <string name="ps_empty_title">无视频或照片\n</string>
    <string name="ps_empty_audio_title">无音频文件\n</string>
    <string name="ps_empty">你可以使用相机拍摄照片或视频</string>
    <string name="ps_audio_empty">你可以使用系统录音录制音频</string>
    <string name="ps_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="ps_min_audio_num">音频最低选择不能少于%1$s个</string>
    <string name="ps_gif_tag">动图</string>
    <string name="ps_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="ps_camera">获取系统相机权限被拒绝</string>
    <string name="ps_audio">获取系统录音权限被拒绝</string>
    <string name="ps_video_toast">视频不可预览</string>
    <string name="ps_record_video">录视频</string>
    <string name="ps_photograph">拍照</string>
    <string name="ps_long_chart">长图</string>
    <string name="ps_warning">暂无媒体文件！</string>
    <string name="ps_prompt">提示</string>
    <string name="ps_prompt_image_content">是否保存图片至手机？</string>
    <string name="ps_prompt_video_content">是否保存视频至手机？</string>
    <string name="ps_prompt_audio_content">是否保存音频至手机？</string>
    <string name="ps_save_image_error">图片保存失败</string>
    <string name="ps_save_video_error">视频保存失败</string>
    <string name="ps_save_audio_error">音频保存失败</string>
    <string name="ps_save_success">文件保存成功至</string>
    <string name="ps_all_audio">所有音频</string>
    <string name="ps_tape">录音</string>
    <string name="ps_play_audio">播放</string>
    <string name="ps_stop_audio">停止</string>
    <string name="ps_quit_audio">退出</string>
    <string name="ps_pause_audio">暂停</string>
    <string name="ps_error">图片已损坏</string>
    <string name="ps_video_error">视频已损坏</string>
    <string name="ps_audio_error">音频已损坏</string>
    <string name="ps_confirm">确定</string>
    <string name="ps_preview_image_num">%1$d/%2$d</string>
    <string name="ps_not_crop_data">无可用裁剪数据</string>
    <string name="ps_original_image">原图 (%1$s)</string>
    <string name="ps_default_original_image">原图</string>
    <string name="ps_send">完成</string>
    <string name="ps_send_num">完成(%1$d/%2$d)</string>
    <string name="ps_preview_num">预览(%1$d)</string>
    <string name="ps_select">选择</string>
    <string name="ps_data_exception">获取相册数据异常…</string>
    <string name="ps_choose_max_seconds">最大只能选择 %1$ds 以内的视频</string>
    <string name="ps_choose_min_seconds">不能选择低于 %1$ds 内的视频</string>
    <string name="ps_choose_limit_seconds">只能选择 %1$ds 至 %2$ds内的视频</string>
    <string name="ps_go_setting">去设置</string>
    <string name="ps_know">我知道了</string>
    <string name="ps_data_null">这里空空如也…</string>
    <string name="ps_editor">编辑</string>
    <string name="ps_webp_tag">webp</string>
    <string name="ps_use_camera">正在使用相机</string>
    <string name="ps_use_sound">正在使用录音功能</string>
    <string name="ps_current_week">本周</string>
    <string name="ps_current_month">这个月</string>
    <string name="ps_select_max_size">选择文件大于%1$s</string>
    <string name="ps_select_min_size">选择文件小于%1$s</string>
    <string name="ps_select_video_max_second">选择视频大于%1$d秒</string>
    <string name="ps_select_video_min_second">选择视频小于%1$d秒</string>
    <string name="ps_select_audio_max_second">选择音频大于%1$d秒</string>
    <string name="ps_select_audio_min_second">选择音频小于%1$d秒</string>
    <string name="ps_select_no_support">不支持的选择类型</string>
    <string name="update_on">Update on: %s</string>
    <string name="theme">Theme</string>
    <string name="new_theme">New Theme</string>
    <string name="more">More</string>
    <string name="select_clip">Select Clip</string>
    <string name="editor">Editor</string>
    <string name="remove_orginal_sound">Remove orginal sound</string>
    <string name="add_music">Add Music</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="tip">Please use → to set pause time as start time or end time</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="no_thanks">NO</string>
    <string name="start_more_than_end">End time must be more than start time</string>
    <string name="yes_shi">YES</string>
    <string name="no_fou">NO</string>
    <string name="start_same_as_end">Start time and end time cannot be the same one</string>
    <string name="time_out_of_bound_end">End time cannot exceed editable time</string>
    <string name="time_out_of_bound_start">Start time cannot exceed editable time</string>
    <string name="clips">clips</string>
    <string name="add_clip_gallery">Gallery</string>
    <string name="add_blank_clip">Add a blank clip</string>
    <string name="afilter_title">Filter</string>
    <string name="transition_title">Transition</string>
    <string name="substile">Subtitle</string>
    <string name="add_doodle">Add Doodle</string>
    <string name="add_sticker">Sticker</string>
    <string name="add_subtitle_hint">Please enter the subtitles</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="draft_save">Draft saved</string>
    <string name="color">Color</string>
    <string name="fontsize">Fontsize</string>
    <string name="video_edit">Video Edit</string>
    <string name="video_trim">Video Trim</string>
    <string name="add_clip_tip">Please select at least one clip</string>
    <string name="drag_tip">Long press and drag to reorder</string>
    <string name="undo">Undo</string>
    <string name="resume">Resume</string>
    <string name="pen">Pen</string>
    <string name="eraser">Eraser</string>
    <string name="mosaic">Mosaic</string>
    <string name="material">Material</string>
    <string name="blur">Blur</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="add_blank" translatable="false">Add a blank clip</string>
    <string name="title_video_trim">Video Trim</string>
    <string name="trim">Trim</string>
    <string name="go_home">Home</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="share_split">Share</string>
    <string name="trim_center">Trim</string>
    <string name="cut">Cut</string>
    <string name="splite">Split</string>
    <string name="font_setting">Font setting</string>
    <string name="my_work">My Works</string>
    <string name="my_drafts">My Drafts</string>
    <string name="my_sudio">My Studio</string>
    <string name="share">Share to</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="fade_in">Fade in</string>
    <string name="fade_out">Fade out</string>
    <string name="edit_clip">Clip Edit</string>
    <string name="edit">Edit</string>
    <string name="camera">Camera</string>
    <string name="cutting">Cutting...</string>
    <string name="guide_preview">Long press to view</string>
    <string name="click_preview">Click to view</string>
    <string name="guide_transition">Tap here to add a transition</string>
    <string name="current_duration_short">You need 0.5s blank space to add new item</string>
    <string name="save">SAVE</string>
    <string name="image_duration">Duration</string>
    <string name="image_duration_apply">Apply to all images</string>
    <string name="stop_play_first">Please stop play first</string>
    <string name="zoom_edit_save">Zoom Saved</string>
    <string name="zoom_save_first">please save zoom first</string>
    <string name="video_audio">Video</string>
    <string name="original_sound">Original Sound</string>
    <string name="music_audio">Music</string>
    <string name="tap_add_music">Tap to add music</string>
    <string name="audio_muted">Video has been muted</string>
    <string name="origin_voice_close">Original sound is closed</string>
    <string name="origin_voice_open">Original sound is opend</string>
    <string name="recover_voice_close">Recover original sound</string>
    <string name="remove_voice_close">Remove original sound</string>
    <string name="trim_success">Cut successfully</string>
    <string name="trim_fail">Cut fail</string>
    <string name="select_over_photo">You have selected many photos,it will run out your memory</string>
    <string name="no_audio">This file don\'t contain voice</string>
    <string name="audio_error">Audio file is error </string>
    <string name="try_this_app">Come and try this app</string>
    <string name="murge_fail">Merge failed</string>
    <string name="audio_murge_fail">audio merge failed</string>
    <string name="gif_support">Support GIF import</string>
    <string name="export_total_size">Estimated file size: %s MB</string>
    <string name="export_resolution">Resolution</string>
    <string name="export_frame">Frame rate</string>
    <string name="export_resolution_tip1">Normal definition - less space, lower resolution</string>
    <string name="export_resolution_tip2">Standard definition - recommended resolution for most videos</string>
    <string name="export_resolution_tip3">High definition - excellent video resolution</string>
    <string name="export_resolution_tip4">Ultra-high definition- restore Ultra HD Video, use more space</string>
    <string name="export_frame_tip">Smoother playback</string>
    <string name="way_to_obtain_max_defination">How to make the best video?</string>
    <string name="consistency_better_raw_low_unavailble">For a better playback experience, it is recommended that you keep the same resolution of the exported and imported videos. If the original low-resolution video is exported at a higher resolution, the increase in clarity may not be noticeable.</string>
    <string name="studio">Studio</string>
    <string name="music_file_unsupport">Your device does not support playing %s files</string>
    <string name="first_element_no_support">The first clip doesn\'t support transition</string>
    <string name="save_drafts">Save to My Draft?</string>
    <string name="next">Next</string>
</resources>