<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/save_drafts"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/normal_selector"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:text="@string/yes_shi"
        android:textColor="@color/tabIndicate_color"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="12dp"
        android:layout_toStartOf="@id/ok"
        android:background="@drawable/normal_selector"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:text="@string/no_fou"
        android:textColor="@color/tabIndicate_color"
        android:textSize="14sp" />


</RelativeLayout>